[package]
name = "helios"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
toml = "0.5.6"
serde = { version = "1", features = ["derive"] }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
skyline-update = { git = "https://github.com/skyline-rs/skyline-update" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
